# diplom

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: endpoints.py  server.py
gpt/: endpoints.py  gpt.py  server.py
notify/: bot.py
tg_parser/: parser.py
worker/: worker.py
